--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.defaultInterpreterPath": "./srcs/requirements/django/venv/bin/python",
+	"python.defaultInterpreterPath": "/goinfre/${USER}/venv/bin/python",
 }
