Add ms-vscode.makefile-tools to devcontainer.json and update init.sh to source .zshrc
This commit adds the "ms-vscode.makefile-tools" extension to the devcontainer.json file and updates the init.sh script to source the .zshrc file.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 				"GitHub.vscode-pull-request-github",
 				"ms-python.vscode-pylance",
 				"ms-python.black-formatter",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"ms-vscode.makefile-tools"
 			],
 			"settings": {
 				"editor.tabSize": 4,
