--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,20 +5,26 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {
-			"installOhMyZsh"				: true,
-			"configureZshAsDefaultShell"	: true
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"moby": true,
+			"azureDnsAutoDetection": true,
+			"installDockerBuildx": true,
+			"installDockerComposeSwitch": true,
+			"version": "latest",
+			"dockerDashComposeVersion": "latest"
 		},
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/devcontainers/features/sshd:1": {},
-		"ghcr.io/devcontainers/features/docker-in-docker": {}
+		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
+			"plugins": "ssh-agent npm",
+			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions",
+			"username": "root"
+		}
 	},
-
-	// Configure tool-specific properties.
+	"postCreateCommand": "pip3 install --user -r /workspaces/ft_transcendence/srcs/requirements.txt && echo alias manage=\"python /workspaces/ft_transcendence/srcs/requirements/django/manage.py\" >> /home/vscode/.zshrc && sudo apt-get update && sudo apt-get install -y openssh-server",
+	
+	
 	"customizations": {
-		"preCreateCommand": "sudo apt-get update && sudo apt-get install -y openssh-server",
-		"postCreateCommand": "echo alias manage=\"python /workspaces/ft_transcendence/srcs/requirements/django/manage.py\" >> /home/vscode/.zshrc/",
-		"postStartCommand": "pip3 install --user -r /workspaces/ft_transcendence/srcs/requirements.txt",
+		// "preCreateCommand": "sudo apt-get update && sudo apt-get install -y openssh-server",
+		// "postCreateCommand": "echo alias manage=\"python /workspaces/ft_transcendence/srcs/requirements/django/manage.py\" >> /home/vscode/.zshrc",
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
@@ -49,13 +55,19 @@
 			}
 		}
 	}
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip3 install --user -r requirements.txt",
+
+	// Configure tool-specific properties.
+	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/python
