--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {
 			"moby": true,
@@ -17,8 +18,9 @@
 			"configureZshAsDefaultShell": true
 		}
 	},
+	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "sudo apt-get update && pip3 install --user -r /workspaces/ft_transcendence/srcs/requirements.txt && echo 'alias manage=\"python /workspaces/ft_transcendence/srcs/requirements/django/manage.py\"' >> /home/vscode/.zshrc",
-	
+	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -50,20 +52,11 @@
 				]
 			}
 		}
-	}
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
+	"forwardPorts": [8000],
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	"remoteUser": "vscode"
 }
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
