--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-srcs/postgres_data
-srcs/requirements/django/venv
 srcs/requirements/django/*/__pycache__
-srcs/requirements/django/*/migrations/__pycache__
+srcs/requirements/django/*/migrations/*
+!srcs/requirements/django/*/migrations/__init__.py
