--- a/srcs/requirements.txt
+++ b/srcs/requirements.txt
@@ -4,23 +4,31 @@ autobahn==23.6.2
 Automat==22.10.0
 cffi==1.16.0
 channels==4.1.0
+channels-redis==4.2.0
 constantly==23.10.4
 cryptography==42.0.5
 daphne==4.1.2
 Django==5.0.4
+gitdb==4.0.11
+GitPython==3.1.41
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+msgpack==1.0.8
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 pyOpenSSL==24.1.0
+redis==5.0.4
 service-identity==24.1.0
+setuptools==69.0.3
 six==1.16.0
+smmap==5.0.1
 sqlparse==0.5.0
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
 websockets==12.0
+wheel==0.43.0
 zope.interface==6.3
