--- a/srcs/requirements.txt
+++ b/srcs/requirements.txt
@@ -18,6 +18,7 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 msgpack==1.0.8
+psycopg==3.1.18
 psycopg-binary==3.1.18
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -25,6 +26,7 @@ pycparser==2.22
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
 redis==5.0.4
+requests==2.32.2
 service-identity==24.1.0
 setuptools==69.0.3
 six==1.16.0
