--- a/srcs/requirements.txt
+++ b/srcs/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.8.1
+astroid==3.2.2
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+certifi==2024.6.2
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
+charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==42.0.5
 daphne==4.1.2
+dill==0.3.8
 Django==5.0.4
 django-cors-headers==4.3.1
 factory-boy==3.3.0
@@ -17,12 +21,18 @@ GitPython==3.1.41
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+isort==5.13.2
+mccabe==0.7.0
 msgpack==1.0.8
+platformdirs==4.2.2
 psycopg==3.1.18
 psycopg-binary==3.1.18
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pylint==3.2.3
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
 redis==5.0.4
@@ -32,9 +42,11 @@ setuptools==69.0.3
 six==1.16.0
 smmap==5.0.1
 sqlparse==0.5.0
+tomlkit==0.12.5
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
+urllib3==2.2.1
 websockets==12.0
 wheel==0.43.0
 zope.interface==6.3
