--- a/srcs/requirements/django/requirements.txt
+++ b/srcs/requirements/django/requirements.txt
@@ -77,6 +77,7 @@ toolz==0.12.1
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
 web3==6.19.0
 websockets==12.0
