--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -61,14 +61,16 @@ services:
     profiles: ["prod"]
     restart: always
 
-  # ganache:
-  #   image: trufflesuite/ganache:latest
-  #   container_name: ganache
-  #   ports:
-  #     - "7545:7545"
-  #   networks:
-  #     - intra
-  #   restart: always
+  hardhat:
+    container_name: hardhat
+    image: hardhat
+    build: ./requirements/hardhat
+    networks:
+      - intra
+    ports:
+      - "8545:8545"
+    profiles: ["dev"]
+    restart: always
 
 volumes:
   postgres_data:
