--- a/srcs/nginx/http.d/ft_transcendence.conf
+++ b/srcs/nginx/http.d/ft_transcendence.conf
@@ -18,11 +18,16 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    # Static files location
-    location /static/ {
-        alias /var/www/ft/;
-    }
+    root /var/www/ft;
 
+    # JavaScript location
+    location /js/ {
+        alias /var/www/ft/js/;
+    }
+    # CSS location
+    location /css/ {
+        alias /var/www/ft/css/;
+    }
     # API and OAuth location
     location ~* ^/(api|oauth)/ {
         proxy_pass http://ft-transcendence;
@@ -44,11 +49,7 @@ server {
     }
     # Default SPA location
     location / {
-        proxy_pass http://ft-transcendence/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri $uri/ /index.html;
     }
     # prevent recursion
     location = /404.html {
