--- a/srcs/django/pyproject.toml
+++ b/srcs/django/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "channels[daphne]==4.1.0",
   "channels-redis==4.2.0",
   "django-cors-headers==4.4.0",
+  "PyJWT==2.8.0",
   "psycopg[binary]==3.1.19",
   "tzdata==2024.1",
   "py-solc-x==2.0.3",
