[HOTFIX] Update SOLCX_BINARY_FILENAME to 0.6.12+commit.27d51765 in docker-compose.yml and django/dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
           USER_ID: ${DOCKER_USER_ID:-1000}
           GROUP_NAME: ${DOCKER_GROUP_NAME:-appgroup}
           GROUP_ID: ${DOCKER_GROUP_ID:-1000}
+          SOLCX_BINARY_FILENAME: ${SOLCX_BINARY_FILENAME:-0.6.12+commit.27d51765}
     env_file:
       - .env
     networks:
@@ -88,23 +89,22 @@ services:
         - action: rebuild
           path: ./srcs/nginx/dockerfile
 
-  # hardhat:
-  #   container_name: hardhat
-  #   image: hardhat
-  #   build:
-  #     context: ./srcs/nginx
-  #     args:
-  #         BUILD_ARCH: ${BUILD_ARCH:-x86_64}
-  #         USER_NAME: ${DOCKER_USER_NAME:-appuser}
-  #         USER_ID: ${DOCKER_USER_ID:-1000}
-  #         GROUP_NAME: ${DOCKER_GROUP_NAME:-appgroup}
-  #         GROUP_ID: ${DOCKER_GROUP_ID:-1000}
-  #   user: ${HOST_USER_ID:-1000}:${HOST_GROUP_ID:-1000}
-  #   networks:
-  #     - intra
-  #   ports:
-  #     - "8545:8545"
-  #   restart: unless-stopped
+  hardhat:
+    container_name: hardhat
+    image: hardhat:ft
+    build:
+      context: ./srcs/hardhat
+      args:
+          BUILD_ARCH: ${BUILD_ARCH:-x86_64}
+          # USER_NAME: ${DOCKER_USER_NAME:-appuser}
+          # USER_ID: ${DOCKER_USER_ID:-1000}
+          # GROUP_NAME: ${DOCKER_GROUP_NAME:-appgroup}
+          # GROUP_ID: ${DOCKER_GROUP_ID:-1000}
+    networks:
+      - intra
+    ports:
+      - "8545:8545"
+    restart: unless-stopped
 
 volumes:
   postgres_data:
