--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -92,8 +92,8 @@ http {
 			'"$http_user_agent" "$http_x_forwarded_for"';
 
 	# Sets the path, format, and configuration for a buffered log write.
-    access_log /app/logs/access.log main;
-	# access_log stdout main;
+    # access_log /app/logs/access.log main;
+	access_log stdout main;
 
 
 	# Includes virtual hosts configs.
