--- a/srcs/django/dockerfile
+++ b/srcs/django/dockerfile
@@ -1,40 +1,41 @@
 FROM alpine:3.19 as base
 
 # Set build arguments
-ARG BUILD_ARCH="x86_64"
-ARG USER_NAME=appuser
-ARG USER_ID=1000
-ARG GROUP_NAME=appgroup
-ARG GROUP_ID=1000
-ARG SOLCX_BINARY_FILENAME="0.6.12+commit.27d51765"
+ARG BUILD_ARCH \
+    USER_NAME \
+    USER_ID \
+    GROUP_NAME \
+    GROUP_ID \
+    SOLCX_VERSION \
+    SOLCX_FILENAME \
+    SOLCX_BINARY_PATH \
+    BASE_DEPS="python3 tini"
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
-PYTHONUNBUFFERED=1 \
-PIP_DISABLE_PIP_VERSION_CHECK=1 \
-PIP_NO_CACHE_DIR=1
+    PYTHONUNBUFFERED=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PIP_NO_CACHE_DIR=1
 # Set working directory
-WORKDIR /app/
-# Install dumb-init and solc
-ADD --chmod=755 https://github.com/Yelp/dumb-init/releases/download/v1.2.5/dumb-init_1.2.5_${BUILD_ARCH} \
-                /bin/dumb-init
-ADD --chmod=755 https://binaries.soliditylang.org/linux-amd64/solc-linux-amd64-v${SOLCX_BINARY_FILENAME} \
-                /bin/solcx
-# Create a non-root user and set permissions
+WORKDIR /app
+# Install and solc
+ADD --chmod=755 https://binaries.soliditylang.org/linux-amd64/solc-linux-amd64-v${SOLCX_FILENAME} \
+                ${SOLCX_BINARY_PATH}
+# Create a non-root user, set permissions, and install base dependencies
 RUN addgroup --gid $GROUP_ID $GROUP_NAME \
     && adduser --disabled-password \
                 --ingroup $GROUP_NAME \
                 --no-create-home \
                 --uid $USER_ID \
-                $USER_NAME
-# Install base dependencies
-ARG BASE_DEPS="python3"
-RUN apk add --update --no-cache ${BASE_DEPS}
-RUN mkdir -p /var/www/ft/
-RUN chown -R ${USER_NAME}:${GROUP_NAME} /var/www/ft/
+                $USER_NAME \
+    && apk add --update --no-cache ${BASE_DEPS} \
+    && mkdir -p /var/www/ft \
+    && chown -R ${USER_NAME}:${GROUP_NAME} /var/www/ft
+
+
 # Set builder image
 FROM base as builder
 # Set working directory
-WORKDIR /app/
+WORKDIR /app
 # Install build dependencies
 ARG BUILD_DEPS="gcc musl-dev libffi-dev python3-dev"
 RUN --mount=type=bind,source=pyproject.toml,target=/app/pyproject.toml \
@@ -48,12 +49,12 @@ RUN --mount=type=bind,source=pyproject.toml,target=/app/pyproject.toml \
 # Set runtime image
 FROM base as runtime
 # Set working directory
-WORKDIR /app/
+WORKDIR /app
 # Set non-root user
 USER ${USER_NAME}
 # Set environment variables
 ENV VIRTUAL_ENV="/app/venv" \
-PATH="/app/venv/bin:$PATH"
+    PATH="/app/venv/bin:$PATH"
 # Copy the virtual environment from the builder image
 COPY --from=builder --chown=$USER_ID:$GROUP_ID /app/venv /app/venv
 # Copy source and entrypoint
@@ -62,7 +63,7 @@ COPY --chown=$USER_ID:$GROUP_ID --chmod=755 ./entrypoint.sh /app/entrypoint.sh
 # Expose port 8000
 EXPOSE 8000
 # Test and run daphne
-ENTRYPOINT [ "/bin/dumb-init", "--" ]
+ENTRYPOINT [ "/sbin/tini", "--" ]
 CMD ["/app/entrypoint.sh"]
 
 # Healthcheck
