Update .gitignore and .dockerignore Refactor views.py and forms.py Update Makefile and settings.py Update middleware.py and pyproject.toml Update user authentication settings Update silenced system checks

--- a/srcs/django/.dockerignore
+++ b/srcs/django/.dockerignore
@@ -3,6 +3,10 @@
 **/*dockerfile
 **/.dockerignore
 **/.pylintrc
-**/*tests.py
-**/*factories.py
+**/tests.py
+**/factories.py
 **/__pycache__
+**/migrations/*
+!**/__init__.py
+ft_transcendence.egg-info
+build
