--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+.vscode/
 **/__pycache__
 **/migrations/*
 !**/__init__.py
-**.env
-**.env.dev
+**/.env
+**/.env.dev
+venv/
+srcs/django/ft_transcendence.egg-info/
+srcs/django/build/
